# zipline-reloaded

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/tasks/: fix_tox_failures.md  fix_tox_progress.md  python_interface_removal_log.md  remove_python_interface_plan.md
.github/workflows/: build_wheels.yml  ci_tests_full.yml  ci_tests_quick.yml  conda_exchange_calendar.yml  conda_package.yml  conda_talib.yml
docs/source/: beginner-tutorial.rst  install.rst
src/zipline/: _protocol.pxd  _protocol.pyx  algorithm.py  country.py  currency.py  dispatch.py  test_algorithms.py
src/zipline/assets/: _assets.pyx  assets.py  continuous_futures.pyx
src/zipline/data/: _equities.pyx  _resample.pyx  data_portal.py  hdf5_daily_bars.py  history_loader.py  resample.py
src/zipline/data/bundles/: core.py  csvdir.py  quandl.py
src/zipline/data/fx/: base.py  exploding.py  hdf5.py  in_memory.py
src/zipline/examples/: __init__.py  dual_ema_talib.py  momentum_pipeline.py  olmar.py
src/zipline/finance/: _finance_ext.pyx  ledger.py  slippage.py  trading.py
src/zipline/finance/metrics/: metric.py
src/zipline/lib/: _factorize.pyx  adjustment.pyx  labelarray.py  normalize.py  quantiles.py  rank.pyx
src/zipline/pipeline/: api_utils.py  common.py  domain.py  downsample_helpers.py  engine.py  expression.py  graph.py  mixins.py  term.py  visualize.py
src/zipline/pipeline/classifiers/: classifier.py
src/zipline/pipeline/data/: equity_pricing.py  testing.py
src/zipline/pipeline/factors/: basic.py  events.py  factor.py  statistical.py  technical.py
src/zipline/pipeline/filters/: filter.py  smoothing.py
src/zipline/pipeline/hooks/: delegate.py  iface.py  no.py  progress.py  testing.py
src/zipline/pipeline/loaders/: base.py  earnings_estimates.py  equity_pricing_loader.py  events.py  frame.py  synthetic.py  testing.py
src/zipline/testing/: core.py  fixtures.py  predicates.py  windows_cleanup.py
src/zipline/utils/: cache.py  deprecate.py  factory.py  memoize.py  numpy_utils.py  pandas_utils.py  paths.py  preprocess.py  run_algo.py  sentinel.py  sharedoc.py  sqlite_utils.py
tests/: conftest.py  test_algorithm.py  test_fetcher.py  test_history.py  test_memoize.py  test_testing.py
tests/data/bundles/: test_core.py  test_quandl.py
tests/finance/: test_slippage.py
tests/pipeline/: base.py  test_adjusted_array.py  test_adjustment.py  test_column.py  test_computable_term.py  test_dataset.py  test_downsampling.py  test_engine.py  test_events.py  test_factor.py  test_filter.py  test_frameload.py  test_international_markets.py  test_pipeline_algo.py  test_quarters_estimates.py  test_slice.py  test_statistical.py  test_technical.py  test_term.py  test_us_equity_pricing_loader.py
tests/resources/pipeline_inputs/: generate.py
tests/utils/: test_numpy_utils.py  test_pandas_utils.py  test_preprocess.py
